--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <!-- SIDEBAR -->
     <aside class="w-48 bg-slate-50 border-r shadow-lg">
       <nav class="mt-6 flex flex-col" aria-label="Primary">
-        <a href="#" class="flex items-center px-5 py-3 bg-[#0b1f52] text-white font-semibold rounded-r-full mb-2 shadow-sm">
+        <a href="index.html" onclick="location.href='index.html'" class="flex items-center px-5 py-3 bg-[#0b1f52] text-white font-semibold rounded-r-full mb-2 shadow-sm">
           <span>Analytics</span>
         </a>
-        <a href="#" class="flex items-center px-5 py-3 text-slate-700 hover:bg-slate-200 rounded-r-full mb-2 transition">
+        <a href="inventory.html" onclick="location.href='inventory.html'" class="flex items-center px-5 py-3 text-slate-700 hover:bg-slate-200 rounded-r-full mb-2 transition">
           <span>Inventory</span>
         </a>
       </nav>
