--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
   <header class="bg-gradient-to-r from-pbGrayLight via-pbGrayMid/80 to-pbBlue">
     <div class="mx-auto max-w-7xl px-6 py-5">
       <div class="flex items-baseline gap-2">
-        <h1 class="text-4xl font-extrabold tracking-tight text-pbBlue">Portobello</h1>
-        <span class="text-xl font-semibold text-pbBlue">America</span>
+  <img src="assets/images/logo_portobello_america_CORES_pantone_655.png" alt="Portobello America" class="h-16 object-contain" />
       </div>
     </div>
   </header>
